filter class overflow fix

--- a/design/default.css
+++ b/design/default.css
@@ -55,6 +55,7 @@ li:hover {
 
 .filter {
     padding: 1.5em;
+    overflow: hidden;
 }
 
 .filter__tilte {
@@ -105,7 +106,6 @@ span>i {
     position: relative;
     padding: 0.4em;
     min-width: 55%;
-    word-break: break-word;
 }
 
 .filter__choice>i {
